fix bad z-index navbar

--- a/src/app/navigation/Navbar.mq.sass
+++ b/src/app/navigation/Navbar.mq.sass
@@ -17,7 +17,7 @@
     left: -$nav-width-m
     position: fixed
     width: $nav-width-m
-    z-index: 1
+    z-index: 3
 
     &[data-open="true"]
       left: 0
