--- a/src/app/navigation/Navbar.sass
+++ b/src/app/navigation/Navbar.sass
@@ -64,7 +64,7 @@
   display: none
   top: 20px
   width: 50px
-  z-index: 1
+  z-index: 2
 
 .burger-open
   @extend %burger
